# deepfakeimage_ai

./: .gitignore  .vercelignore  Procfile  main.py  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements.txt  wsgi.py
api/: index.py
fake_image_detector/: .gitignore  DEMO_SCRIPT.md  README.md  app.py  prediction_history.json  requirements.txt
fake_image_detector/model/: network.py  predict.py  train_model.py
fake_image_detector/static/css/: style.css
fake_image_detector/static/js/: app.js
fake_image_detector/templates/: dashboard.html  index.html  result.html  upload.html
fake_image_detector/utils/: gradcam_visualization.py  image_preprocess.py
