[project]
name = "deepfakeimage-ai"
version = "0.1.0"
description = "Flask app for AI image authenticity detection."
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch",
  "torchvision",
  "flask",
  "gunicorn",
  "opencv-python",
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "pillow",
]
